<resources>
<string name="app_name">APRSdroid 9M2PJU</string>
<string name="app_prefs">APRSdroid Preferences</string>
<string name="menu">Menu</string>
<string name="app_map">APRSdroid Map</string>
<string name="app_hub">APRSdroid Hub</string>
<string name="app_log">APRSdroid Log</string>
<string name="app_sta">Station Info</string>
<string name="app_messages">Messages</string>
<string name="app_messages_clear">Clear Messages</string>
<string name="firstrun">You need to configure APRSdroid with your callsign and passcode!</string>
<string name="wrongpasscode">Your passcode does not match your callsign!</string>
<string name="e_toolong_callsign">Your callsign is too long for Packet Radio!</string>
<string name="anon_warning">Without a passcode, your reports will not be propagated!</string>
<string name="mininterval">Minimum update time is 1 minute!</string>
<string name="singlelog">Send Position</string>
<string name="startlog">Start Tracking</string>
<string name="stoplog">Stop Tracking</string>
<string name="empty_logview">You have not yet sent or received any packets.\n\n
	Press the \"Menu\" button to send a single report or to start tracking your position.\n\n
	You can also change the application preferences from the menu.</string>
<string name="sta_lastreport">%s Last Report</string>
<string name="map_track_call">Tracking %s...</string>
<string name="map_track_unknown">Position for %s unknown!</string>
<string name="map_select">Select station</string>
<string name="map_my_location">Center on my location</string>
<string name="map_no_location">No last known location available</string>
<string name="map_loading">Loading...</string>
<string name="sta_ssids">Station SSIDs</string>
<string name="sta_history">Station History</string>
<string name="sta_map">Map</string>
<string name="sta_extmap">External Map</string>
<string name="sta_aprsfi">aprs.fi</string>
<string name="sta_qrzcom">QRZ.com</string>
<string name="msg_send_new">Send message to...</string>
<string name="msg_message_text">Message text</string>
<string name="msg_empty_list">There are no stored conversations.</string>
<string name="msg_stored_offline">The message will be sent as soon as you start tracking.</string>
<string name="msg_not_tracking_title">Tracking is not started</string>
<string name="msg_not_tracking_body">Your message has been saved, but APRSdroid is not connected. Start tracking now to send it?</string>
<string name="msg_from">Message from %s</string>
<string name="msg_to">Message to %s</string>
<string name="msg_abort">Abort transmission</string>
<string name="msg_restart">Restart transmission</string>
<string name="msg_type_rejected">rejected</string>
<string name="msg_type_aborted">aborted</string>
<string name="aprsservice">APRSdroid Service</string>
<string name="service_once">APRS Service single shot: %1$s, %2$s.</string>
<string name="service_start">APRS Service started: %1$s, %2$s.</string>
<string name="service_stop">APRS Service stopped.</string>
<string name="service_no_location">You need to enable either GPS or Network Location for APRSdroid to work properly!</string>
<string name="service_sm_no_gps">SmartBeaconing™ requires GPS!</string>
<string name="post_error">Error</string>
<string name="post_incmg">Received</string>
<string name="post_info"></string>
<string name="post_connecting">Connecting to %1$s:%2$d...</string>
<string name="post_reconnect">Connection lost. Reconnect in %d seconds...</string>
<string name="fr_title">Welcome to APRSdroid!</string>
<string name="fr_text">This software may only be used by licensed amateur radio
	operators!</string>
<string name="fr_text2">You need to enter your callsign to use this software.
	To forward your packets, an APRS-IS passcode is required as well.</string>
<string name="fr_text3">Only needed for APRS over the Internet:</string>
<string name="firstrun_welcome_title">Welcome to APRSdroid</string>
<string name="firstrun_welcome_text">APRSdroid is an Android app for amateur radio APRS. To get started, please grant the following permissions. You can change these later in Android Settings.</string>
<string name="firstrun_perms_header">Permissions needed</string>
<string name="firstrun_perm_location">📍 Location - Needed to broadcast your position to the APRS network and show nearby stations.</string>
<string name="firstrun_perm_notifications">🔔 Notifications - Needed to show service status and alert you of incoming APRS messages. (Android 13+)</string>
<string name="firstrun_perm_bluetooth">🔵 Bluetooth - Needed to connect to Bluetooth TNCs and radios. (Android 12+)</string>
<string name="firstrun_perm_microphone">🎤 Microphone - Needed for AFSK audio decoding when using the phone as a TNC.</string>
<string name="firstrun_perm_storage">📁 Storage - Needed for offline MBTiles and MapsForge maps. On Android 11+, requires \"All files access\".</string>
<string name="firstrun_btn_grant">Grant Permissions</string>
<string name="firstrun_btn_storage">Grant All Files Access</string>
<string name="firstrun_btn_continue">Continue</string>
<string name="firstrun_perms_granted">All permissions granted!</string>
<string name="firstrun_perms_already_granted">Permissions already granted.</string>
<string name="firstrun_perms_partial">%1$d of %2$d permissions granted. You can grant the rest later in Settings.</string>
<string name="firstrun_storage_granted">All files access granted!</string>
<string name="firstrun_storage_denied">All files access not granted. You can enable it later in Settings.</string>
<string name="firstrun_storage_already_granted">All files access already granted.</string>
<string name="firstrun_storage_not_needed">All files access is only needed on Android 11+.</string>
<string name="update_available_title">Update available</string>
<string name="update_available_text">A new version of APRSdroid is available!\n\nInstalled: %1$s\nLatest: %2$s\n\nWould you like to download and install it?</string>
<string name="update_download">Download</string>
<string name="update_later">Later</string>
<string name="update_skip">Skip this version</string>
<string name="update_downloading_title">Downloading update</string>
<string name="update_downloading_message">Downloading APRSdroid %1$s…</string>
<string name="update_download_failed">Download failed. Opening browser instead.</string>
<string name="update_download_cancelled">Download cancelled.</string>
<string name="update_install_failed">Could not launch installer. Opening browser instead.</string>
<string name="check_updates">Check for updates</string>
<string name="up_to_date">You are running the latest version (%s).</string>
<string name="up_to_date_title">Up to date</string>
<string name="update_check_failed">Could not check for updates. Check your internet connection.</string>
<string name="update_check_failed_title">Update check failed</string>
<string name="ad_license_title">License</string>
<string name="ad_thanks_all">Bob Bruninga, WB4APR (1947-2022): Creator of APRS\nGeorg Lukas, DO1GL: Original APRSdroid author\nMike, NA7Q: BLE TNC, digipeater, IGate, MBTiles mapping, https://na7q.com/aprsdroid-osm/\nFaizul, 9M2PJU: Some updates and improvements, https://hamradio.my\nMichael, DO3BOX: idea\nDirk, DB5OY: motivation and support\nBastian, DB1BM: AFSK implementation\nMatti, OH2MQK and John, AB0OO: Java APRS\nSivan, 4X6IZ: AFSK demodulator, https://github.com/sivantoledo/javAX25\nSmartBeaconing™ by HamHUD Nichetronix, LLC, http://hamhud.net</string>
<string name="report_bug">Report a bug</string>
<string name="report_bug_subject">APRSdroid 9M2PJU Mod bug report</string>
<string name="report_bug_body">Please describe the bug:\n\n\nApp version: %1$s\nAndroid: %2$s\nDevice: %3$s\n</string>
<string name="no_email_app">No email app found. Please email 9m2pju@hamradio.my directly.</string>
<string name="ad_title">About APRSdroid 9M2PJU Mod</string>
<string name="ad_copyright">APRSdroid 9M2PJU Mod\n
	Copyright © 2026 9M2PJU\n
	https://aprsdroid.hamradio.my
	\n\n
	Based on NA7Q\'s fork of APRSdroid by Georg Lukas (DO1GL)\n
	Copyright © 2009-2021 Georg Lukas (DO1GL)\n
	https://aprsdroid.org
	\n\n
	APRS® is a registered trademark of Bob Bruninga (WB4APR)
</string>
<string name="about">About</string>
<string name="export_log">Export Log</string>
<string name="clear_log">Clear Log</string>
<string name="clearallmessages">Clear Messages</string>
<string name="preferences">Preferences</string>
<string name="p_winlink">Winlink Email</string>
<string name="winlink_status_logged_out">Logged out</string>
<string name="winlink_login">Login</string>
<string name="winlink_logout">Logout</string>
<string name="winlink_list">List</string>
<string name="winlink_compose">Compose</string>
<string name="winlink_msg_number">Message number (1-5)</string>
<string name="winlink_msg_number_hint">1</string>
<string name="winlink_sms_to">To (email, callsign, or alias)</string>
<string name="winlink_sms_to_hint">sam@iam.com</string>
<string name="winlink_sms_message">Short message (one line)</string>
<string name="winlink_sms_message_hint">A short message</string>
<string name="winlink_alias_name">Alias name</string>
<string name="winlink_alias_name_hint">sam</string>
<string name="winlink_alias_email">Email address</string>
<string name="winlink_alias_email_hint">sam@somelongdomainname.net</string>
<string name="winlink_alias_delete_hint">Leave email blank to delete alias</string>
<string name="winlink_forward_to">Forward to (email or callsign)</string>
<string name="winlink_forward_to_hint">youraddr@home.net</string>
<string name="winlink_compose_to">To (email or callsign)</string>
<string name="winlink_compose_subject">Subject</string>
<string name="winlink_compose_body">Message body</string>
<string name="winlink_compose_hint_to">john@example.com</string>
<string name="winlink_compose_hint_subject">Test message</string>
<string name="winlink_compose_hint_body">Type your message here…</string>
<string name="p__wtsapp">WTSAPP</string>
<string name="wtsapp_send">Send WhatsApp</string>
<string name="wtsapp_set_alias">Set Alias</string>
<string name="wtsapp_remove_alias">Remove Alias</string>
<string name="p__bot">9M2PJU-4 BOT</string>
<string name="bot_help">Help</string>
<string name="bot_today">Today</string>
<string name="bot_posmsg">PosMsg</string>
<string name="bot_whereis">WhereIs</string>
<string name="bot_whereami">WhereAmI</string>
<string name="bot_riseset">RiseSet</string>
<string name="bot_satpass">SatPass</string>
<string name="bot_sota">SOTA</string>
<string name="bot_pota">POTA</string>
<string name="bot_police">Police</string>
<string name="bot_hospital">Hospital</string>
<string name="bot_fire_station">Fire Stn</string>
<string name="bot_posmsg_email">Email address for position report</string>
<string name="bot_posmsg_email_hint">someone@email.com</string>
<string name="bot_posmsg_message">Optional message (one line)</string>
<string name="bot_posmsg_message_hint">I am at this location</string>
<string name="p__aprsmy">APRSMY Net</string>
<string name="aprsmy_check">Check</string>
<string name="aprsmy_help">Help</string>
<string name="aprsmy_status">Status</string>
<string name="aprsmy_count">Count</string>
<string name="aprsmy_last">Last</string>
<string name="aprsmy_top">Top</string>
<string name="aprsmy_me">Me</string>
<string name="p__mailmy">MAILMY</string>
<string name="p__gamemy">GAMEMY</string>
<string name="p__callmy">CALLMY</string>
<string name="p__bbsmy">BBSMY</string>
<string name="p__repeat">REPEATER</string>
</resources>