<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/menu_options">
	<item android:id="@+id/startstopbtn"
		android:title="@string/startlog"
		android:alphabeticShortcut="t"
		android:icon="@android:drawable/ic_menu_compass" />
	<item android:id="@+id/singlebtn"
		android:title="@string/singlelog"
		android:alphabeticShortcut="s"
		android:icon="@android:drawable/ic_menu_myplaces" />
	<item android:id="@+id/export"
		android:title="@string/export_log"
		android:alphabeticShortcut="x"
		android:icon="@android:drawable/ic_menu_save" />
	<item android:id="@+id/clear"
		android:title="@string/clear_log"
		android:alphabeticShortcut="c"
		android:icon="@android:drawable/ic_menu_delete" />
	<item android:id="@+id/clearallmessages"
		android:title="@string/clearallmessages"
		android:alphabeticShortcut="d"
		android:icon="@android:drawable/ic_menu_delete" />		
	<item android:id="@+id/preferences"
		android:title="@string/preferences"
		android:alphabeticShortcut="p"
		android:icon="@android:drawable/ic_menu_preferences" />
	<item android:id="@+id/about"
		android:title="@string/about"
		android:alphabeticShortcut="a"
		android:icon="@android:drawable/ic_menu_info_details" />
	<item android:id="@+id/check_updates"
		android:title="@string/check_updates"
		android:alphabeticShortcut="u"
		android:icon="@android:drawable/ic_menu_upload" />
	<item android:id="@+id/report_bug"
		android:title="@string/report_bug"
		android:alphabeticShortcut="b"
		android:icon="@android:drawable/ic_menu_send" />
</group>
</menu>

