<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:padding="10dp">

<LinearLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/winlink_compose_to"
android:textStyle="bold" />

<EditText android:id="@+id/winlink_to"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/winlink_compose_hint_to"
android:singleLine="true"
android:inputType="textEmailAddress" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8dp"
android:text="@string/winlink_compose_subject"
android:textStyle="bold" />

<EditText android:id="@+id/winlink_subject"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/winlink_compose_hint_subject"
android:singleLine="true"
android:maxLength="67"
android:inputType="textEmailSubject|textCapSentences" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8dp"
android:text="@string/winlink_compose_body"
android:textStyle="bold" />

<EditText android:id="@+id/winlink_body"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/winlink_compose_hint_body"
android:minLines="4"
android:gravity="top|left"
android:inputType="textMultiLine|textCapSentences" />

</LinearLayout>
</ScrollView>
