<?xml version="1.0" encoding="utf-8"?>
<!-- Dialog for A command: A [alias]=[email] (leave email blank to delete) -->
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="10dp">

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/winlink_alias_name"
android:textStyle="bold" />

<EditText android:id="@+id/winlink_alias_name_field"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/winlink_alias_name_hint"
android:singleLine="true"
android:inputType="text" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8dp"
android:text="@string/winlink_alias_email"
android:textStyle="bold" />

<EditText android:id="@+id/winlink_alias_email_field"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/winlink_alias_email_hint"
android:singleLine="true"
android:inputType="textEmailAddress" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="4dp"
android:text="@string/winlink_alias_delete_hint"
android:textSize="11sp"
android:textColor="#999" />

</LinearLayout>
